--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "思源笔记MCP服务器",
   "main": "dist/server.js",
   "type": "module",
+  "private": false,
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "build": "tsc",
     "start": "node dist/server.js",
