--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "build": "tsc",
     "start": "node dist/server.js",
     "dev": "node --loader ts-node/esm src/server.ts",
-    "clean": "rm -rf dist",
+    "clean": "rimraf dist",
     "prepublishOnly": "npm run clean && npm run build"
   },
   "files": [
@@ -62,6 +62,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.13.14",
+    "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
   }
