添加构建脚本和Jest配置，更新README以包含环境要求和本地构建说明，同时在package.json中添加测试命令和相关依赖，增强项目的构建和测试功能。

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
     "noImplicitAny": false,
     "allowJs": true,
     "resolveJsonModule": true,
-    "declaration": true
+    "declaration": true,
+    "isolatedModules": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules"]
