--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@onigeya/siyuan-mcp-server",
-  "version": "1.0.3-0",
+  "version": "1.1.0",
   "description": "思源笔记MCP服务器",
   "type": "module",
   "private": false,
