--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -15,8 +15,11 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 23
-      - run: npm install
-      - run: npm run build
+      - uses: pnpm/action-setup@v3
+        with:
+          version: 10.7.0
+      - run: pnpm install
+      - run: pnpm build
 
   publish-npm:
     needs: build
@@ -27,6 +30,10 @@ jobs:
         with:
           node-version: 23
           registry-url: https://registry.npmjs.org/
-      - run: npm publish
+      - uses: pnpm/action-setup@v3
+        with:
+          version: 10.7.0
+      - run: pnpm install
+      - run: pnpm publish --no-git-checks
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
