--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "@onigeya/siyuan-mcp-server",
   "version": "1.2.3",
   "description": "思源笔记MCP服务器",
+  "bin": {
+    "siyuan-mcp-server": "./dist/server.js"
+  },
   "type": "module",
   "private": false,
   "main": "./dist/server.js",
