--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@onigeya/siyuan-mcp-server",
-  "version": "1.2.3",
+  "name": "@huia/siyuan-mcp-server",
+  "version": "1.2.5",
   "description": "思源笔记MCP服务器",
   "bin": {
     "siyuan-mcp-server": "./dist/server.js"
