--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@huia/siyuan-mcp-server",
+  "name": "@onigeya/siyuan-mcp-server",
   "version": "1.2.5",
   "description": "思源笔记MCP服务器",
   "bin": {
